# wordle

./: Cargo.toml  README.md
examples/: egui.rs  hello_eframe.rs  tui_exa.rs
src/: buildin_words.rs  command.rs  error.rs  lib.rs  state.rs  states.rs  word.rs  wordle.rs
src/cmd/: mod.rs
src/tui/: action.rs  controller.rs  event.rs  mod.rs  tui.rs  ui.rs  widgets.rs
tests/: test_01_20_letter.rs  test_02_20_tui.rs
