[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
colored = "2.0.4"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.49"


[features]
default = ["tui", "cmd"]
cmd = []
tui = []
gui = []
