[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
color-eyre = "0.6.2"
colored = "2.0.4"
crossterm = { version = "0.27.0", features = ["event-stream"] }
derive_builder = "0.12.0"
futures = "0.3.28"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
ratatui = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.49"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "tracing",
    "sync",
    "time",
] }
tokio-util = "0.7.9"


[features]
default = ["tui", "cmd"]
cmd = []
tui = []
gui = []
